cloture de commande avec les transaction